<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
android:key="general_preferencescreen" >
	
	<CheckBoxPreference
		android:key="booleanDevMode"
		android:title="@string/titleDevMode"
		android:summary="@string/summaryDevMode"
		android:defaultValue="false"/>
	
	<CheckBoxPreference
		android:key="booleanAnalytics"
		android:title="@string/titleAnalytics"
		android:summary="@string/summaryAnalytics"
		android:defaultValue="true"/>
	

    <PreferenceScreen
            android:key="addDevice"
            android:title="@string/titleAddDevice"
            android:summary="@string/summaryAddDevice" />

    <PreferenceScreen
            android:key="reportBug"
            android:title="@string/titleReportBug"
            android:summary="@string/summaryReportBug" />

	<PreferenceScreen
		android:key="advancedPreferences"
		android:title="@string/titleAdvancedPreferences"
        android:summary="@string/summaryAdvancedPreferences"/>
    
</PreferenceScreen> 