<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/generalDescription"
        android:layout_marginTop="20dp"
        android:src="@drawable/warning" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/totalTextView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/concludingTextView"
        android:layout_marginTop="28dp" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/descriptionTextView"
        android:layout_marginTop="32dp" android:layout_below="@+id/textView2" android:layout_alignParentLeft="true"/>

    <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:text="@string/helpButton"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"/>

</RelativeLayout>
